# localization

./: .envrc  pyproject.toml  run_rosbag.py  setup.py
autograder/: solutions_go_here.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: OpenSpace.msg
launch/: localize.launch.xml
localization/: api_alan.py  controller.py  convergence_plot.py  helpers.py  helpers_adelene.py  motion_model.py  motion_model_adelene.py  motion_modele_adelene.py  noise_plots.py  params.yaml  particle_filter.py  particle_filter_adelene.py  particle_filter_eghosa.py  particle_filter_from_alan.py  plot_error.py  real_params.yaml  run_sandbox.py  sandbox.py  sensor_model.py  sensor_model_debug.py  sensor_model_eghosa.py  sensor_model_paul.py  test_driver.py
localization/evaluation_scripts/: controller.py  convergence_plot.py  noise_plots.py  run_tests.sh
