[tool.poetry]
name = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.11"

# liblocalization = { path = "/home/alan/6.4200/liblocalization", develop = true }
liblocalization = { git = "https://github.com/rss2025-4/liblocalization.git" }
better-exceptions = "^0.3.3"


[tool.isort]
profile = "black"
known_first_party = ["libracecar"]

[tool.pyright]
exclude = ["**/result*"]
typeCheckingMode = "basic"
reportPrivateImportUsage = false
